--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,7 +1,6 @@
 - name: Software Engineer Keywords
   keywords:
-      - Java
-      - C++
+      - JavaScript
       - Python
       - Design Patterns
 
