--- a/_config.yml
+++ b/_config.yml
@@ -91,17 +91,17 @@ disqus:
     username:
 # https://imsun.net/posts/gitment-introduction/
 gitment:
-    owner: gaofangshang
-    repo: blog-comments
-    oauth:
-        client_id: 149770603b64e68a7a5a
-        client_secret: 12d7946e2a5b166e7bcf446939ea2d67d3874020
-# https://github.com/gitalk/gitalk#install
-gitalk:
     owner:
     repo:
-    clientID:
-    clientSecret:
+    oauth:
+        client_id:
+        client_secret:
+# https://github.com/gitalk/gitalk#install
+gitalk:
+    owner: gaofangshang9868@163.com
+    repo: gaofangshang9868@163.com
+    clientID: 2514abb7ee41ef17823c
+    clientSecret: ba0155abbb3037fd149f7fc26844428fb8ae88dc
 # 在使用其它评论组件时可点击显示 Disqus
 lazy_load_disqus : false
 
@@ -109,4 +109,4 @@ lazy_load_disqus : false
 #    Analytics     #
 # ---------------- #
 google:
-    analytics_id: UA-80669434-1
+    analytics_id:
